--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,6 +35,14 @@
               </svg>
               Historique
             <% end %>
+
+                <%= link_to wine_templates_path, class: "dropdown-item" do %>
+                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                 <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+                 <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+                </svg>
+                Ma Bibliothèque
+             <% end %>
             <div class="dropdown-divider"></div>
             <%= link_to destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item logout" do %>
               <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -74,6 +82,14 @@
         </svg>
         Historique
       <% end %>
+
+                <%= link_to wine_templates_path, class: "mobile-nav-link" do %>
+                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                 <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+                 <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+                </svg>
+                Ma Bibliothèque
+             <% end %>
       <%= link_to destroy_user_session_path, data: { turbo_method: :delete }, class: "mobile-nav-link logout" do %>
         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
