--- a/app/views/storages/show.html.erb
+++ b/app/views/storages/show.html.erb
@@ -31,12 +31,19 @@
         <% wine = @wines.find { |w| w.row_position == row && w.col_position == col } %>
 
         <% if wine %>
+          <%
+            image_name = case wine.wine_type&.downcase
+                         when 'rosso', 'rouge' then 'rosso.png'
+                         when 'bianco', 'blanc' then 'bianco.png'
+                         when 'rosé', 'rose' then 'rose.png'
+                         when 'champagne' then 'champagne.png'
+                         when 'frizzante', 'pétillant' then 'frizzante.png'
+                         else 'rosso.png'
+                         end
+          %>
           <%= link_to storage_wine_path(@storage, wine), class: "wine-slot filled" do %>
             <div class="wine-bottle-icon">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M8 2h8l2 10-4 10-4-10z"/>
-                <ellipse cx="12" cy="2" rx="4" ry="1"/>
-              </svg>
+              <%= image_tag image_name, alt: wine.wine_type, class: "bottle-image" %>
             </div>
             <div class="wine-info">
               <p class="wine-name"><%= wine.name %></p>
@@ -46,7 +53,7 @@
         <% else %>
           <%= link_to new_storage_wine_path(@storage, row: row, col: col), class: "wine-slot empty" do %>
             <div class="add-wine-icon">
-              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                 <line x1="12" y1="5" x2="12" y2="19"></line>
                 <line x1="5" y1="12" x2="19" y2="12"></line>
               </svg>
