--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,19 @@
 
   <body>
   <%= render 'shared/navbar' %>
-      <p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<% flash.each do |type, message| %>
+  <div class="flash-alert flash-<%= type %>" id="flash-message">
+    <div class="flash-content">
+      <% if type == 'notice' %>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="flash-icon"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
+      <% else %>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="flash-icon"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12.01" y2="16"></line></svg>
+      <% end %>
+      <span><%= message %></span>
+    </div>
+    <button class="flash-close" onclick="document.getElementById('flash-message').style.display='none'">&times;</button>
+  </div>
+<% end %>
 
       <%= yield %>
   </body>
