--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require_self
  */
 @import "components/navbar";
+@import "components/alerts";
 @import "pages/home";
 @import "pages/devise";
 @import "pages/storage";
