edit stockage parfait

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import "pages/devise";
 @import "pages/storage";
 @import "pages/storage_form";
+@import "pages/storage_form_edit";
 @import "pages/storage_show";
 @import "pages/wine_form";
 @import "pages/wine_show";
