background home details

--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -9,7 +9,7 @@ $white: #ffffff;
 .home-container {
   width: 100%;
   overflow-x: hidden;
-  background-color: $white;
+  background-color: $cream-bg;
 }
 
 .hero-section {
